--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,18 @@
-DJANGO_ENV=production
-DEBUG=True
+DEBUG=1
 
-ALLOWED_HOSTS=
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 SECRET_KEY=''
 
-DJANGO_ALLOWED_HOSTS=
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
-DB_HOST=
-# DB_HOST=postgres_db
+DB_HOST=postgres_db
 DB_PORT=
 
 DJANGO_SUPERUSER_EMAIL=
 DJANGO_SUPERUSER_PASSWORD=
-DATABASE=
+DATABASE=postgres
 
 # settings.py
 EMAIL_USE_SSL = True
