--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,25 +47,24 @@ services:
         volumes:
             - ./frontend/public/:/usr/src/app/public/
             - ./frontend/src/:/usr/src/app/src/
-        depends_on:
-            - django
         networks:
             ds_network:
                 ipv4_address: 172.20.10.22 
-    # nginx:
-    #     image: nginx:latest
-    #     volumes:
-    #     - ./conf/nginx.conf:/etc/nginx/nginx.conf
-    #     - static_volume:/static
-    #     ports:
-    #     - "80:80"
-    #     networks:
-    #     - my_network
-    #     depends_on:
-    #     - node
-    #     - django
+    nginx:
+        image: nginx:latest
+        volumes:
+        - ./conf/nginx.conf:/etc/nginx/nginx.conf
+        - static_volume:/static
+        ports:
+        - "80:80"
+        networks:
+            ds_network:
+                ipv4_address: 172.20.10.23
+        depends_on:
+        - django
+        - node
 
 # создаём volume для статики
 volumes:
   postgres_volume:
-#   static_volume:
+  static_volume:
